[package]
name = "samase_shim"
version = "0.5.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.2"
libc = "0.2"
once_cell = "1.7"
parking_lot = "0.12"
thread_local = "1.1"
winapi = { version = "0.3", features = ["heapapi", "libloaderapi", "winuser"] }

[dependencies.samase_plugin]
path = ".."

[dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "2d1adbae09d75bdaa2af65b0af12760740cd3d2b"
