[package]
name = "samase_shim"
version = "0.5.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.2"
parking_lot = "0.12"
thread_local = "1.1"

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Memory",
]

[dependencies.samase_plugin]
path = ".."
features = ["implementer_helpers"]

[dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "57c7bf5ab1161678e6d0437e071fdee655c6f28d"
